<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/clientNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/clientNameTextView" />

        <TextView
            android:id="@+id/preSaleFolioTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/folioPreSaleText" />

        <TextView
            android:id="@+id/preSaleProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/preSaleProducts" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/codeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/codeHeader" />

            <TextView
                android:id="@+id/nameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/presentationHeader" />

            <TextView
                android:id="@+id/quantityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quantityHeader" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/listProductsOfPreSale"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

    </ListView>

    <TextView
        android:id="@+id/totalAmountForPreSale"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:text="@string/totalAmountForPresale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listProductsOfPreSale" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAmountForPreSale">

        <Button
            android:id="@+id/cancelSaleOfPresaleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelSaleFromPreSale"
            android:textAllCaps="false"
            android:textColor="#222222"
            app:backgroundTint="#C5C5C5" />

        <View
            android:id="@+id/view7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/genSaleOfPresaleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genSaleFromPreSale"
            android:textAllCaps="false"
            android:textColor="#222222"
            app:backgroundTint="#C5C5C5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>