<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0C0C0C"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/foliosaleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/folioTextView"
                android:textColor="#249FD6" />

            <TextView
                android:id="@+id/clientSaleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clientNameDebtTextView"
                android:textColor="#249FD6" />

            <TextView
                android:id="@+id/amountSaletextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amountDebtTextView"
                android:textColor="#249FD6" />

            <TextView
                android:id="@+id/statusSaleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estatusDebtTextView"
                android:textColor="#249FD6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/payDebt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/payDebtButton"
                android:textAllCaps="false"
                app:backgroundTint="#005EFF" />

            <Button
                android:id="@+id/reprintPayDeb"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/reprintDebtButton"
                android:textAllCaps="false"
                app:backgroundTint="#FFC107" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>