<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/presaleModTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/presaleModTitle" />

        <TextView
            android:id="@+id/presaleModFolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/presaleModFolio" />

        <TextView
            android:id="@+id/presaleModAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/presaleModAmount" />

        <ScrollView
            android:layout_width="match_parent"
            android:contentDescription="listadoDeProductos"
            android:layout_height="250dp">

            <LinearLayout
                android:id="@+id/listProductsToEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/presaleModCancelText" />

            <View
                android:id="@+id/view9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/modificateButton"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/presaleModModificateText" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>