<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#0C0C0C"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/productCode"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/codeProductItem"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/nameProductItem"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/productWeight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/weightProductItem"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>